<resources>
    <string name="app_name">FoodProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <array name="categories">
        <item>All</item>
        <item>Burger</item>
        <item>Pizza</item>
        <item>Dessert</item>
    </array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="bookmark">Bookmark</string>
    <string name="delivery">Bolt</string>
    <string name="food">Food</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_found">Not Found</string>
    <string name="total_price">Total Price</string>
    <string name="send_your_location">send your location</string>
    <string name="order_now">Order Now</string>
    <string name="title_activity_maps">Map</string>
    <string name="send_pos">Your site has been submitted</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favourite">My Favourite</string>
</resources>
