<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.LoginActivity"
    android:background="#fff"
    android:paddingTop="16dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/first_Name"
        android:padding="15dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="55dp"
        android:textSize="14sp"
        android:hint="@string/first_name"
        android:background="@drawable/border_edittext"/>
    <EditText
        android:id="@+id/last_name"
        android:padding="15dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="55dp"
        android:textSize="14sp"
        android:hint="@string/last_name"
        android:layout_marginStart="@dimen/margin5"
        android:background="@drawable/border_edittext"/>
</LinearLayout>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_envelope"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edittext"
            android:drawableStart="@drawable/ic_unlock_alt"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_yellow_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16dp" />

<!--        <TextView-->
<!--            android:id="@+id/signup"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:drawableStart="@drawable/ic_smile_wink"-->
<!--            android:drawablePadding="10dp"-->
<!--            android:text="Sign Up" />-->
    </LinearLayout>


</LinearLayout>


